@@ -559,6 +559,13 @@ const sipTypeDef \*sipType
     have to recognise the exact class, only the most specific sub-class that
     it can.
 
+    The code may also set the value to a type that is apparently unrelated to
+    the requested type.  If this happens then the whole conversion process is
+    started again using the new type as the requested type.  This is typically
+    used to deal with classes that have more than one super-class that are
+    subject to this conversion process.  It allows the code for one super-class
+    to switch to the code for another (more appropriate) super-class.
+
 sipWrapperType \*sipClass
     .. deprecated:: 4.8
         Use ``sipType`` instead.
