@@ -1,6 +1,8 @@
 v4.13 ??? October 2011
   - Added the %DefaultDocstringFormat directive.
   - Added the format argument to the %Docstring directive.
+  - %ConvertToSubClassCode can now cause a restart of the conversion process
+    using a different requested type.
 
 v4.12.4 2nd August 2011
   - PyLong_AsUnsignedLongMask() and PyLong_AsUnsignedLongLongMask() are now
